Scene transitions (still bit buggy)

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
+@import 'locomotive-scroll.css';
+
 html, body {
 	position: relative;
 	width: 100%;
